fix:solve image bed problem
