# docs/swagger.json
@@ -13,12 +13,12 @@
         },
         "version": "1.0.0"
     },
-    "host": "122.112.236.36:8080",
+    "host": "119.3.2.168:8080",
     "basePath": "/api/v1",
     "paths": {
         "/announcement": {
             "get": {
-                "description": "用户查看已经发布过的通知",
+                "description": "用户查看已经发布的通知",
                 "consumes": [
                     "application/json"
                 ],
@@ -36,6 +36,20 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit--偏移量指定开始返回记录之前要跳过的记录数 ",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page--限制指定要检索的记录数 ",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -50,6 +64,107 @@
                     },
                     "500": {
                         "description": "{\"msg\":\"Error occurred while getting url queries.\"}",
+                        "schema": {
+                            "$ref": "#/definitions/errno.Errno"
+                        }
+                    }
+                }
+            }
+        },
+        "/announcement/:announcement_id": {
+            "delete": {
+                "description": "仅组织创建者可删除通告",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "announcement"
+                ],
+                "summary": "删除通知",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "通知ID",
+                        "name": "announcement_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"msg\":\"删除成功\"}"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errno.Errno"
+                        }
+                    },
+                    "412": {
+                        "description": "{\"msg\":\"身份认证失败\"}",
+                        "schema": {
+                            "$ref": "#/definitions/errno.Errno"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errno.Errno"
+                        }
+                    }
+                }
+            }
+        },
+        "/announcement/:collect_id": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "announcement"
+                ],
+                "summary": "取消收藏",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "collect_id",
+                        "name": "collect_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"msg\":\"取消成功\"}",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Collection"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "{Code: 20002, Message: \"Database error.\"}",
                         "schema": {
                             "$ref": "#/definitions/errno.Errno"
                         }
@@ -98,8 +213,9 @@
                 }
             }
         },
-        "/announcement/collect/cancel/:collect_id": {
-            "delete": {
+        "/announcement/content": {
+            "post": {
+                "description": "仅组织创建者可发布新的通知",
                 "consumes": [
                     "application/json"
                 ],
@@ -109,7 +225,7 @@
                 "tags": [
                     "announcement"
                 ],
-                "summary": "取消收藏",
+                "summary": "发布通知",
                 "parameters": [
                     {
                         "type": "string",
@@ -119,79 +235,39 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "collect_id",
-                        "name": "collect_id",
-                        "in": "path",
-                        "required": true
+                        "description": "组织创建者发布的新通知",
+                        "name": "announcement",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Announcement"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"msg\":\"取消成功\"}",
+                        "description": "{\"msg\":\"创建成功\"}",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Collection"
+                                "$ref": "#/definitions/model.Announcement"
                             }
                         }
                     },
-                    "500": {
-                        "description": "{Code: 20002, Message: \"Database error.\"}",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    }
-                }
-            }
-        },
-        "/announcement/delete/:announcement_id": {
-            "delete": {
-                "description": "仅组织创建者可删除通告",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "announcement"
-                ],
-                "summary": "删除通知",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "通知ID",
-                        "name": "announcement_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"msg\":\"删除成功\"}"
-                    },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "{Code: 10002, Message: \"Error occurred while binding the request body to the struct.\"}",
                         "schema": {
                             "$ref": "#/definitions/errno.Errno"
                         }
                     },
                     "412": {
-                        "description": "{\"msg\":\"身份认证失败\"}",
+                        "description": "{\"msg\":\"身份认证错误\"}",
                         "schema": {
                             "$ref": "#/definitions/errno.Errno"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "{Code: 20002, Message: \"Database error.\"}",
                         "schema": {
                             "$ref": "#/definitions/errno.Errno"
                         }
@@ -247,68 +323,6 @@
                     },
                     "412": {
                         "description": "{\"msg\":\"身份认证失败\"}",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    }
-                }
-            }
-        },
-        "/announcement/publish": {
-            "post": {
-                "description": "仅组织创建者可发布新的通知",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "announcement"
-                ],
-                "summary": "发布通知",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "组织创建者发布的新通知",
-                        "name": "announcement",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Announcement"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"msg\":\"创建成功\"}",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Announcement"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "{Code: 10002, Message: \"Error occurred while binding the request body to the struct.\"}",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    },
-                    "412": {
-                        "description": "{\"msg\":\"身份认证错误\"}",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    },
-                    "500": {
-                        "description": "{Code: 20002, Message: \"Database error.\"}",
                         "schema": {
                             "$ref": "#/definitions/errno.Errno"
                         }
@@ -384,6 +398,20 @@
                         "description": "token",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit--偏移量指定开始返回记录之前要跳过的记录数",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page--限定制定要检索的记录数",
+                        "name": "page",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -605,6 +633,20 @@
                 "summary": "查看创建",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "description": "limit--偏移量指定开始返回记录之前要跳过的记录数 ",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page--限制指定要检索的记录数 ",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "type": "string",
                         "description": "token",
                         "name": "Authorization",
@@ -656,6 +698,20 @@
                         "description": "token",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit--偏移量指定开始返回记录之前要跳过的记录数 ",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page--限制指定要检索的记录数 ",
+                        "name": "page",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -745,6 +801,20 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit--偏移量指定开始返回记录之前要跳过的记录数 ",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page--限制指定要检索的记录数 ",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -829,6 +899,20 @@
                         "description": "token",
                         "name": "Authorization",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit--偏移量指定开始返回记录之前要跳过的记录数 ",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page--限制指定要检索的记录数 ",
+                        "name": "page",
+                        "in": "query",
                         "required": true
                     }
                 ],
